--- a/web/templates/index/index.html
+++ b/web/templates/index/index.html
@@ -1,8 +1,71 @@
 {% load staticfiles %}
-<html>
-<head>
-            <link rel="stylesheet" href="{% static 'css/index.css' %}">
-        </head>
+<!DOCTYPE html>
+  <html lang="es">
+  <head>
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <title>Bootstrap Example Template</title>
+    <meta charset="utf-8">
+    <!-- Viewport Meta Tag -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
+  </head>
+  <body>
+
+    <div class="container">
+      <!-- SU CONTENIDO VA AQUÍ -->
+              <br>
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Noticias
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="noticia/list">Lista de noticias</a>
+            <a class="dropdown-item" href="noticia/edit">Crear noticia</a>
+          </div>
+          </div>
+          <br>
+          <br>
+          <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Avisos
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="aviso/list">Lista de avisos</a>
+            <a class="dropdown-item" href="aviso/edit">Crear aviso</a>
+          </div>
+        </div>
         <br>
-  <a class="boton_personalizado" href="noticia/list">Noticias</a>
+        <br>
+        <script type="text/javascript" language="javascript">
+  function checkfile(sender) {
+      var validExts = new Array(".xlsx", ".xls");
+      var fileExt = sender.value;
+      fileExt = fileExt.substring(fileExt.lastIndexOf('.'));
+      if (validExts.indexOf(fileExt) < 0) {
+        alert("Invalid file selected, valid files are of " +
+                 validExts.toString() + " types.");
+        return false;
+      }
+      else return true;
+  }
+  </script>
+<form action="excel/actualizar" method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+  <input type="file" id="file" name="file" onchange="checkfile(this);" />
+  <input type="submit" value="Actualizar BD">
+</form>
+
+    </div>
+
+    <!-- JavaScript: placed at the end of the document so the pages load faster -->
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+
+    <!-- Tether -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script>
+  </body>
   </html>
