--- a/web/templates/envio/list.html
+++ b/web/templates/envio/list.html
@@ -14,16 +14,13 @@
     <!-- SU CONTENIDO VA AQUÍ -->
     <div>
       <br>
-          <h1><a href="/">Lista de Noticias</a></h1>
+          <h1><a href="/">Lista de Envios</a></h1>
       </div>
 
-      {% for noticia in noticias %}
+      {% for envio in envios %}
           <div>
-            <h1>{{ noticia.titulo }}</h1>
-              <p>Autor: {{ noticia.autor }}</p>
-              <p>{{ noticia.descripcion|linebreaksbr }}</p>
-              <p>Publicado: {{ noticia.fecha}}</p>
-              <a class="btn btn-default" href="{% url 'noticiaEditar' pk=noticia.pk %}">Editar<span class="glyphicon glyphicon-pencil"></span></a>
+            <h1>{{ envio.titulo }}</h1>
+              <a class="btn btn-default" href="{% url 'envioDescargar' path=envio.archivo %}">Descargar<span class="glyphicon glyphicon-pencil"></span></a>
 
           </div>
       {% endfor %}
