--- a/web/templates/index/index.html
+++ b/web/templates/index/index.html
@@ -3,7 +3,7 @@
   <html lang="es">
   <head>
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
-    <title>Bootstrap Example Template</title>
+    <title>Index</title>
     <meta charset="utf-8">
     <!-- Viewport Meta Tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,6 +37,17 @@
         </div>
         <br>
         <br>
+        <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Envíos
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="envio/list">Lista de envios</a>
+          <a class="dropdown-item" href="envio/edit">Nuevo envio</a>
+        </div>
+      </div>
+      <br>
+      <br>
         <script type="text/javascript" language="javascript">
   function checkfile(sender) {
       var validExts = new Array(".xlsx", ".xls");
