--- a/web/templates/noticia/edit.html
+++ b/web/templates/noticia/edit.html
@@ -1,7 +1,7 @@
        <!DOCTYPE html>
        <html lang="es">
        <head>
-         <title>Bootstrap Example Template</title>
+         <title>Nueva noticia</title>
          <meta charset="utf-8">
          <!-- Viewport Meta Tag -->
          <meta name="viewport" content="width=device-width, initial-scale=1">
