--- a/web/templates/index/index.html
+++ b/web/templates/index/index.html
@@ -48,6 +48,17 @@
       </div>
       <br>
       <br>
+      <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Peticiones
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="peticion/list">Lista de peticiones</a>
+        <a class="dropdown-item" href="peticion/edit">Nueva petición</a>
+      </div>
+    </div>
+    <br>
+    <br>
         <script type="text/javascript" language="javascript">
   function checkfile(sender) {
       var validExts = new Array(".xlsx", ".xls");
