--- a/seguridad/templates/login.html
+++ b/seguridad/templates/login.html
@@ -6,33 +6,93 @@
         <title>Asecon Consultores</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport"></meta>
         <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}"></link>
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <style>
+
+         body{
+              font-family: 'Playfair Display', serif;
+               background: url("https://i.imgur.com/N7tWUWO.jpg") no-repeat center center fixed;
+              -webkit-background-size: cover;
+              -moz-background-size: cover;
+              -o-background-size: cover;
+              background-size: cover;
+         }
+
+         label{
+            color : white;
+            display: inline-block;
+            margin-top : 3%;
+        }
+
+
+        img {
+            width : 25%;
+            height : 25%;
+            margin-bottom : 10px;
+        }
+
+         .container{
+            margin : auto;
+            margin-top : 7%;
+            padding: 30px;
+            border-radius : 20px;
+            width : 40%;
+            height : 100%;
+            background : #0b4c46;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            text-align: center;
+         }
+
+         input {
+             width : 40%;
+             background : white;
+             padding: 10px;
+             margin-top : 3%;
+             border : 0px solid transparent;
+             border-radius : 20px;
+         }
+
+        hr{
+            border : 1px solid black;
+        }
+
+        button {
+          background-color: #0b4c46;
+          border: none;
+          color: white;
+          text-align: center;
+          padding: 10px;
+          cursor: pointer;
+          margin-top : 5%;
+        }
+
+        i {
+            font-size : 40px;
+        }
+
+        .boton{
+            text-align:center;
+        }
+         </style>
     </head>
     <body>
         <div class="container">
-            <br>
-            <div class="row">
-                <div class="col-md-4 col-md-offset-4">
-                    <div class="login-panel panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Administración Asecon Consultores</h3>
-                        </div>
-                        <div class="panel-body">
-                            <form role="form" method="post" id='form_login'>
-                                {% csrf_token %}
-                                <div class="form-group">
-                                    <label>Usuario:</label>
-                                    {{ form.username }}
-                                </div>
-                                <div class="form-group">
-                                    <label>Contraseña:</label>
-                                    {{ form.password }}
-                                </div>
-                                <button class="btn btn-lg btn-success btn-block" type="submit" name="login"/>Login</button>
-                            </form>
-                        </div>
+            <img src="https://i.imgur.com/zEQnupo.png">
+                <form role="form" method="post" id='form_login'>
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label><i class="material-icons">person</i></label>
+                        {{ form.username }}
                     </div>
-                </div>
-            </div>
+                    <div class="form-group">
+                        <label><i class="material-icons">lock</i></label>
+                        {{ form.password }}
+                    </div>
+                    <div class="boton">
+                    <button class="btn btn-lg btn-success btn-block" type="submit" name="login"/><i class="material-icons">power_settings_new</i></button>
+                    </div>
+                </form>
         </div>
     </body>
 </html>
