--- a/web/templates/aviso/list.html
+++ b/web/templates/aviso/list.html
@@ -1,32 +1,176 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Bootstrap Example Template</title>
+    <link rel="icon" type="image/png" href="https://i.imgur.com/zEQnupo.png" />
+  <title>Avisos</title>
   <meta charset="utf-8">
   <!-- Viewport Meta Tag -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
-</head>
+<link href="https://fonts.googleapis.com/css?family=Gochi+Hand" rel="stylesheet">
+<style>
+
+         body{
+              font-family: 'Gochi Hand', cursive;
+               background: url("https://i.imgur.com/jxeoqAh.jpg") no-repeat center center fixed;
+              -webkit-background-size: cover;
+              -moz-background-size: cover;
+              -o-background-size: cover;
+              background-size: cover;
+         }
+
+        .container{
+            width : 50%;
+         }
+
+
+         .aviso{
+             padding:10%;
+            width: 100%;
+            height : 90%;
+            background : url("https://img.clipartxtras.com/978a9efbb8cd46aa0ab32de97b0dbf13_sticky-note-svg-clip-arts-download-clip-arts-free-png-backgrounds-post-it-note-clipart-png_500-400.svg") no-repeat center;
+            background-size: 100% 100%;
+            text-align: center;
+            margin-top: 8%;
+         }
+
+         .fecha {
+             padding-top: 0px !important;
+             padding-bottom : 5px !important;
+         }
+
+         .fecha:before{
+             content: '\2691';
+         }
+
+        .Bajo:before {
+            font-size: 20px;
+            color:green !important ;
+            content: '\25C9';
+        }
+
+        .Alto:before {
+            font-size: 20px;
+            color:red !important;
+            content: '\25C9';
+        }
+
+        .Medio:before {
+            font-size: 20px;
+            color:yellow !important;
+            content: '\25C9';
+        }
+
+        h1 {
+            padding-top:40px;
+            padding-left:60px;
+            padding-right:60px;
+            font-weight: 900;
+            font-size: 30px;
+            text-transform: uppercase;
+            text-align : center !important;
+        }
+
+        p {
+            padding-left:60px;
+            padding-right:60px;
+        }
+
+        hr{
+            border : 1px solid black;
+        }
+
+        .btn {
+            font-weight: 900;
+            font-size: 15px;
+          border-radius: 10px;
+          background-color: #0b4c46;
+          border: none;
+          color: white;
+          text-align: center;
+          padding: 10px;
+          width: 120px;
+          transition: all 0.5s;
+          cursor: pointer;
+          margin: 5px;
+        }
+
+        .btn span {
+          cursor: pointer;
+          display: inline-block;
+          position: relative;
+          transition: 0.5s;
+          color: white !important;
+        }
+
+        .btn span:after {
+          content: '\270E';
+          position: absolute;
+          opacity: 0;
+          top: 0;
+          right: -20px;
+          transition: 0.5s;
+          color: white !important;
+        }
+
+        .btn:hover span {
+          padding-right: 25px;
+          color: white !important;
+        }
+
+        .btn:hover span:after {
+          opacity: 1;
+          right: 0;
+          color: white !important;
+        }
+
+        .boton{
+            text-align:center;
+            padding-bottom:30px;
+        }
+         </style>
+    </head>
 <body>
 
   <div class="container">
     <!-- SU CONTENIDO VA AQUÍ -->
-    <div>
-      <br>
-          <h1><a href="/">Avisos</a></h1>
-      </div>
+        <a class="btn btn-primary" href="/" role="button">Volver</a>
 
-      {% for aviso in avisos %}
-          <div>
-            <h1>{{aviso.titulo }}</h1>
-              <p>{{aviso.descripcion|linebreaksbr }}</p>
-              <p>Prioridad: {{ aviso.prioridad}}</p>
-              <p>Fecha: {{ aviso.fechaLimite}}</p>
-              <a class="btn btn-default" href="{% url 'web:avisoEditar' pk=aviso.pk %}">Editar<span class="glyphicon glyphicon-pencil"></span></a>
+      {% for item in items %}
+          <div class="aviso">
+              <h1>{{item.titulo }}</h1>
+              <p>{{item.descripcion|linebreaksbr }}</p>
+              <p class="{{aviso.prioridad}}">   Prioridad: {{ item.prioridad}} </p>
+              <p class="fecha">  Fecha: {{ item.fechaLimite}}</p>
+              <a class="btn btn-default" href="{% url 'web:avisoEditar' pk=item.pk %}"><span class="glyphicon glyphicon-pencil">Editar</span></a>
           </div>
       {% endfor %}
   </div>
+
+
+{% if items.has_next or items.has_previous %}
+
+
+    <ul class="pagination">
+        {% if items.has_previous %}
+            <li><a href="?page={{ items.previous_page_number }}" class="btn btnpages"><i
+                    class="glyphicon glyphicon-chevron-left"></i></a></li>
+        {% endif %}
+        {% for page in items.paginator.page_range %}
+            <li class="{% if items.number == page %}active{% endif %}">
+                <a class="btn btnpages" href="?page={{ page }}">{{ page }}</a></li>
+        {% endfor %}
+
+        {% if items.has_next %}
+            <li>
+                <a href="?page={{ items.next_page_number }}" class="btn btnpages">
+                    <i class="glyphicon glyphicon-chevron-right"></i>
+                </a>
+            </li>
+        {% endif %}
+    </ul>
+    {% endif %}
 
   <!-- JavaScript: placed at the end of the document so the pages load faster -->
   <!-- jQuery library -->
