--- a/web/templates/index/index.html
+++ b/web/templates/index/index.html
@@ -2,104 +2,101 @@
 <!DOCTYPE html>
   <html lang="es">
   <head>
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
-    <title>Index</title>
+     <link rel="icon" type="image/png" href="https://i.imgur.com/zEQnupo.png" />
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <title>Asecon Consultores</title>
     <meta charset="utf-8">
     <!-- Viewport Meta Tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <style>
+
+    .btn-group{
+         padding-top : 0px !important;
+         padding-bottom : 17px !important;
+    }
+
+    button {
+        border-radius: 0px !important;
+        margin-right : 60px;
+        padding-top : 25px !important;
+        padding-bottom : 8px !important;
+        font-weight: 400 !important;
+        text-transform: uppercase;
+        letter-spacing: 2px !important;
+    }
+
+    button:hover{
+        border-bottom: 2px solid #0b4c46 !important;
+        border-left: 0px solid transparent!important;
+        border-right: 0px solid transparent !important;
+        border-top: 0px solid transparent !important;
+        background: transparent !important;
+    }
+
+  </style>
   </head>
   <body>
+      <div class="container-fullwidth">
+<img src="https://i.imgur.com/LB0XZX5.png" alt="Trulli" width="100%" >
 
-    <div class="container">
-      <!-- SU CONTENIDO VA AQUÍ -->
-              <br>
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Noticias
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="noticia/list">Lista de noticias</a>
-            <a class="dropdown-item" href="noticia/edit">Crear noticia</a>
-          </div>
-          </div>
-          <br>
-          <br>
-          <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Avisos
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="aviso/list">Lista de avisos</a>
-            <a class="dropdown-item" href="aviso/edit">Crear aviso</a>
-          </div>
-        </div>
-        <br>
-        <br>
-          <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Recibos
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="recibo/list">Lista de recibos</a>
-          <a class="dropdown-item" href="recibo/edit">Nuevo recibo</a>
-        </div>
-      </div>
-      <br>
-      <br>
-      <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Peticiones
+
+     <div class="text-center" style="width:100%; background : #f8f9fa;">
+     <div class="btn-group" >
+      <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown">
+      Noticias
       </button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="noticia/list">Lista de noticias</a>
+        <a class="dropdown-item" href="noticia/edit">Crear noticia</a>
+      </div>
+    </div>
+    <div class="btn-group">
+      <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown">
+      Avisos
+      </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="aviso/list">Lista de avisos</a>
+        <a class="dropdown-item" href="aviso/edit">Crear aviso</a>
+      </div>
+    </div>
+     <div class="btn-group">
+      <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown">
+      Recibos
+      </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="recibo/list">Lista de recibos</a>
+        <a class="dropdown-item" href="recibo/edit">Nuevo recibo</a>
+      </div>
+    </div>
+     <div class="btn-group">
+      <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown">
+      Peticiones
+      </button>
+      <div class="dropdown-menu">
         <a class="dropdown-item" href="peticion/list">Lista de peticiones</a>
         <a class="dropdown-item" href="peticion/edit">Nueva petición</a>
       </div>
     </div>
-    <br>
-    <br>
-     <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Usuarios
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="usuario/list">Lista de usuarios</a>
-          <a class="dropdown-item" href="usuario/edit">Nuevo usuario</a>
-        </div>
+       <div class="btn-group">
+      <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown">
+      Usuarios
+      </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="usuario/list">Lista de usuarios</a>
+        <a class="dropdown-item" href="usuario/edit">Nuevo usuario</a>
       </div>
-      <br>
-      <br>
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Salir
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="{% url 'seguridad:salir' %}">Salir</a>
-        </div>
-      </div>
-      <br>
-      <br>
-        <script type="text/javascript" language="javascript">
-  function checkfile(sender) {
-      var validExts = new Array(".xlsx", ".xls");
-      var fileExt = sender.value;
-      fileExt = fileExt.substring(fileExt.lastIndexOf('.'));
-      if (validExts.indexOf(fileExt) < 0) {
-        alert("Invalid file selected, valid files are of " +
-                 validExts.toString() + " types.");
-        return false;
-      }
-      else return true;
-  }
-  </script>
-<form action="excel/actualizar" method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  <input type="file" id="file" name="file" onchange="checkfile(this);" />
-  <input type="submit" value="Actualizar BD">
-</form>
-
     </div>
+    <a class="btn btn-light" href="{% url 'seguridad:salir' %}"><i class="material-icons">exit_to_app</i></a>
+  </div>
+</div>
+</div>
+
 
     <!-- JavaScript: placed at the end of the document so the pages load faster -->
     <!-- jQuery library -->
