--- a/web/templates/noticia/list.html
+++ b/web/templates/noticia/list.html
@@ -1,35 +1,182 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="icon" type="image/png" href="https://i.imgur.com/zEQnupo.png" />
   <title>Lista de noticias</title>
   <meta charset="utf-8">
+  <script>
+                function myFunction(mess) {
+                    alert(mess);
+                }
+                </script>
   <!-- Viewport Meta Tag -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <style>
+
+         body{
+              font-family: 'Playfair Display', serif;
+               background: url("https://i.imgur.com/gbs74Xe.jpg") no-repeat center center fixed;
+              -webkit-background-size: cover;
+              -moz-background-size: cover;
+              -o-background-size: cover;
+              background-size: cover;
+         }
+
+        .header {
+            padding-top: 15px;
+        }
+
+        .container{
+            width : 40%;
+         }
+
+
+         .noticia{
+            width: 100%;
+            height : 20%;
+            background : white;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            text-align: center;
+            margin-top: 8%;
+         }
+
+         .noticia img {
+             width : 100% !important;
+         }
+
+         .fecha {
+             padding-top: 0px !important;
+             padding-bottom : 5px !important;
+         }
+
+         .ampliar {
+             padding-right:30px !important;
+             padding-top:0px !important;
+             padding-bottom: 0px !important;
+             text-align: right;
+         }
+
+        h1 {
+            padding:30px;
+            font-weight: 900;
+            font-size: 30px;
+            text-transform: uppercase;
+            text-align : center !important;
+        }
+
+        p {
+            padding:30px;
+            overflow:hidden;
+            white-space:nowrap;
+            text-overflow: ellipsis;
+        }
+
+        hr{
+            border : 1px solid black;
+        }
+
+        .btn {
+            font-weight: 900;
+            font-size: 15px;
+          border-radius: 10px;
+          background-color: black;
+          border: none;
+          color: white;
+          text-align: center;
+          padding: 10px;
+          width: 120px;
+          transition: all 0.5s;
+          cursor: pointer;
+          margin: 5px;
+        }
+
+        .btn span {
+          cursor: pointer;
+          display: inline-block;
+          position: relative;
+          transition: 0.5s;
+          color: white !important;
+        }
+
+        .btn span:after {
+          content: '\270E';
+          position: absolute;
+          opacity: 0;
+          top: 0;
+          right: -20px;
+          transition: 0.5s;
+          color: white !important;
+        }
+
+        .btn:hover span {
+          padding-right: 25px;
+          color: white !important;
+        }
+
+        .btn:hover span:after {
+          opacity: 1;
+          right: 0;
+          color: white !important;
+        }
+
+        .boton{
+            text-align:center;
+            padding-bottom:30px;
+        }
+         </style>
 </head>
 <body>
 
   <div class="container">
     <!-- SU CONTENIDO VA AQUÍ -->
-    <div>
-      <br>
-          <h1><a href="/">Lista de Noticias</a></h1>
-      </div>
+                <a class="btn btn-primary" href="/" role="button">Volver</a>
 
-      {% for noticia in noticias %}
-          <div>
-              {% if noticia.foto %}
-              <h1><img src= "{{noticia.foto.url}}"  width="400" height="453"></h1>
+
+      {% for item in items %}
+          <div class="noticia">
+              <h1>{{ item.titulo }}</h1>
+              <p class="fecha">Publicado: {{ item.fecha}}</p>
+              {% if item.foto %}
+              <img src= "{{item.foto.url}}">
                {% endif %}
-            <h1>{{ noticia.titulo }}</h1>
-              <p>{{ noticia.descripcion|linebreaksbr }}</p>
-              <p>Publicado: {{ noticia.fecha}}</p>
-              <a class="btn btn-default" href="{% url 'web:noticiaEditar' pk=noticia.pk %}">Editar<span class="glyphicon glyphicon-pencil"></span></a>
-
+              <p>{{ item.descripcion|linebreaksbr }}</p>
+              <div class="ampliar">
+              <a href="javascript:window.onclick = myFunction('{{item.descripcion}}')">Ver más</a>
+              </div>
+              <br>
+              <div class="boton">
+              <a class="btn btn-default" href="{% url 'web:noticiaEditar' pk=item.pk %}"><span class="glyphicon glyphicon-pencil">Editar</span></a>
+                </div>
           </div>
       {% endfor %}
   </div>
+
+
+{% if items.has_next or items.has_previous %}
+
+
+    <ul class="pagination">
+        {% if items.has_previous %}
+            <li><a href="?page={{ items.previous_page_number }}" class="btn btnpages"><i
+                    class="glyphicon glyphicon-chevron-left"></i></a></li>
+        {% endif %}
+        {% for page in items.paginator.page_range %}
+            <li class="{% if items.number == page %}active{% endif %}">
+                <a class="btn btnpages" href="?page={{ page }}">{{ page }}</a></li>
+        {% endfor %}
+
+        {% if items.has_next %}
+            <li>
+                <a href="?page={{ items.next_page_number }}" class="btn btnpages">
+                    <i class="glyphicon glyphicon-chevron-right"></i>
+                </a>
+            </li>
+        {% endif %}
+    </ul>
+    {% endif %}
 
   <!-- JavaScript: placed at the end of the document so the pages load faster -->
   <!-- jQuery library -->
