--- a/web/templates/recibo/list.html
+++ b/web/templates/recibo/list.html
@@ -1,30 +1,161 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Bootstrap Example Template</title>
+    <link rel="icon" type="image/png" href="https://i.imgur.com/zEQnupo.png" />
+  <title>Recibos</title>
   <meta charset="utf-8">
   <!-- Viewport Meta Tag -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
+    <style>
+
+         body{
+              font-family: 'Old Standard TT', serif;
+               background: url("https://i.imgur.com/z5vhiBs.jpg") no-repeat center center fixed;
+              -webkit-background-size: cover;
+              -moz-background-size: cover;
+              -o-background-size: cover;
+              background-size: cover;
+         }
+
+        .header {
+            padding-top: 15px;
+        }
+
+        .container{
+            width : 40%;
+         }
+
+
+         .recibo{
+            padding: 30px;
+            border-radius: 6px;
+            background : url("https://i.imgur.com/egW3fjA.jpg") no-repeat center;
+            background-size:100% 100%;
+            width: 100%;
+            height : 14%;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            text-align: center;
+            margin-top: 8%;
+         }
+
+         .fecha {
+             padding-top: 0px !important;
+             padding-bottom : 5px !important;
+         }
+
+
+        h1 {
+            padding:30px;
+            font-weight: 900;
+            font-size: 30px;
+            text-transform: uppercase;
+            text-align : center !important;
+        }
+
+        p {
+            padding:30px;
+            overflow:hidden;
+            white-space:nowrap;
+            text-overflow: ellipsis;
+        }
+
+        hr{
+            border : 1px solid black;
+        }
+
+        .btn {
+            font-weight: 900;
+            font-size: 15px;
+          border-radius: 10px;
+          background-color: black;
+          border: none;
+          color: white;
+          text-align: center;
+          padding: 10px;
+          width: 120px;
+          transition: all 0.5s;
+          cursor: pointer;
+          margin: 5px;
+        }
+
+        .btn span {
+          cursor: pointer;
+          display: inline-block;
+          position: relative;
+          transition: 0.5s;
+          color: white !important;
+        }
+
+        .btn span:after {
+          content: '\21E9';
+          position: absolute;
+          opacity: 0;
+          top: 0;
+          right: -20px;
+          transition: 0.5s;
+          color: white !important;
+        }
+
+        .btn:hover span {
+          padding-right: 25px;
+          color: white !important;
+        }
+
+        .btn:hover span:after {
+          opacity: 1;
+          right: 0;
+          color: white !important;
+        }
+
+        .boton{
+            text-align:center;
+            padding-bottom:30px;
+        }
+         </style>
 </head>
 <body>
 
+
+
   <div class="container">
     <!-- SU CONTENIDO VA AQUÍ -->
-    <div>
-      <br>
-          <h1><a href="/">Lista de Recibos</a></h1>
-      </div>
+               <a class="btn btn-primary" href="/" role="button">Volver</a>
 
-      {% for recibo in recibos %}
-          <div>
-            <h1>{{ recibo.titulo }}</h1>
-            <p>Destinatario: {{ recibo.usuario.nombre}} {{ recibo.usuario.apellidos}}</p>
-              <a class="btn btn-default" href="{% url 'web:envioDescargar' path=recibo.pdf %}">Descargar<span class="glyphicon glyphicon-pencil"></span></a>
+
+      {% for item in items %}
+          <div class="recibo">
+            <h1>{{ item.titulo }}</h1>
+            <p>Destinatario: {{ item.usuario.nombre}} {{ item.usuario.apellidos}}</p>
+              <a class="btn btn-default" href="{% url 'web:envioDescargar' path=item.pdf %}"><span class="glyphicon glyphicon-pencil">Descargar</span></a>
           </div>
       {% endfor %}
   </div>
+
+  {% if items.has_next or items.has_previous %}
+
+
+    <ul class="pagination">
+        {% if items.has_previous %}
+            <li><a href="?page={{ items.previous_page_number }}" class="btn btnpages"><i
+                    class="glyphicon glyphicon-chevron-left"></i></a></li>
+        {% endif %}
+        {% for page in items.paginator.page_range %}
+            <li class="{% if items.number == page %}active{% endif %}">
+                <a class="btn btnpages" href="?page={{ page }}">{{ page }}</a></li>
+        {% endfor %}
+
+        {% if items.has_next %}
+            <li>
+                <a href="?page={{ items.next_page_number }}" class="btn btnpages">
+                    <i class="glyphicon glyphicon-chevron-right"></i>
+                </a>
+            </li>
+        {% endif %}
+    </ul>
+    {% endif %}
 
   <!-- JavaScript: placed at the end of the document so the pages load faster -->
   <!-- jQuery library -->
