--- a/web/templates/usuario/mail.html
+++ b/web/templates/usuario/mail.html
@@ -1,22 +1,158 @@
   <!DOCTYPE html>
        <html lang="es">
        <head>
+          <link rel="icon" type="image/png" href="https://i.imgur.com/zEQnupo.png" />
          <title>Enviar Correo</title>
          <meta charset="utf-8">
          <!-- Viewport Meta Tag -->
          <meta name="viewport" content="width=device-width, initial-scale=1">
          <!-- Bootstrap CSS -->
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
+         <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <style>
+
+         body{
+              font-family: 'Playfair Display', serif;
+               background: url("http://www.sobrevinoylicores.es/wp-content/uploads/2016/03/177937-mail-box-wallpaper-hd.jpg") no-repeat center center fixed;
+              -webkit-background-size: cover;
+              -moz-background-size: cover;
+              -o-background-size: cover;
+              background-size: cover;
+         }
+
+         label{
+            display: block;
+            margin: .5em 0 10px 0;
+            text-align: center;
+        }
+
+        .header {
+            padding-top: 15px;
+        }
+
+        img {
+            width : 35%;
+            height : 35%;
+            margin-bottom : 20px;
+        }
+
+         .container{
+            margin-top: 3%;
+            padding: 30px;
+            width : 50%;
+            height : 14%;
+            border-radius: 6px;
+            background : url("https://i.imgur.com/9Ktgpau.jpg") no-repeat center;
+            background-size: 100% 100%;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            text-align: center;
+         }
+
+        input {
+             width : 50%;
+             background : transparent;
+             padding: 10px;
+             border : 0px solid transparent;
+             border-bottom: 1px solid black !important;
+         }
+
+         input:hover{
+             width : 60%;
+             border-bottom: 2px solid blue !important;
+             transition-duration: 1s;
+         }
+
+         input:focus{
+             width : 60%;
+             border-bottom: 2px solid blue !important;
+         }
+
+
+         textarea {
+             margin-top : 3%;
+             width : 50%;
+             background : transparent;
+             padding: 10px;
+             height:100px;
+             border : 0px solid transparent;
+             border: 1px solid black !important;
+         }
+
+         textarea:focus {
+              width : 60%;
+             border: 2px solid blue !important;
+             transition-duration: 1s;
+         }
+
+         textarea:hover{
+             width : 60%;
+             border: 2px solid blue !important;
+             transition-duration: 1s;
+         }
+
+        hr{
+            border : 1px solid black;
+        }
+
+       button {
+            font-weight: 900;
+            font-size: 30px;
+          border-radius: 10px;
+          background-color: black;
+          border: none;
+          color: white;
+          text-align: center;
+          font-size: 28px;
+          padding: 10px;
+          width: 150px;
+          transition: all 0.5s;
+          cursor: pointer;
+          margin: 5px;
+        }
+
+        button span {
+          cursor: pointer;
+          display: inline-block;
+          position: relative;
+          transition: 0.5s;
+        }
+
+        button span:after {
+          content: '\2709';
+          position: absolute;
+          opacity: 0;
+          top: 0;
+          right: -20px;
+          transition: 0.5s;
+        }
+
+        button:hover span {
+          padding-right: 25px;
+        }
+
+        button:hover span:after {
+          opacity: 1;
+          right: 0;
+        }
+
+        .boton{
+            text-align:center;
+        }
+         </style>
        </head>
        <body>
-     <div class="container">
-     <h1><a href="/">Nuevo mail</a></h1>
-    <form method="POST" class="mail-form">{% csrf_token %}
-      {{ form.as_p }}
-    <button type="submit" class="save btn btn-default">Enviar</button>
-          </form>
-         </div>
+    <div class="container">
+        <a class="btn btn-primary" href="http://ardbud.pythonanywhere.com/web/index/usuario/list" role="button">Volver</a>
+        <div class="formulario">
+            <form method="POST" class="mail-form">{% csrf_token %}
+              {{ form.as_p }}
 
+              <div class="boton">
+                 <button type="submit" class="save btn btn-default"><span>Enviar</span></button>
+                </div>
+            </form>
+        </div>
+    </div>
          <!-- JavaScript: placed at the end of the document so the pages load faster -->
          <!-- jQuery library -->
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
